@@ -38,6 +38,8 @@ Release 1.1.3-1.1 Start 27/04/2023 End 01/01/2024
 17. multilog.c: use unlinkat() if available instead of unlink
 - 18/02/2024
 19. multilog.c: BUG: fix wrong argument passed to open_read() in finish()
+- 26/02/2024
+20. systemd.in: replace /etc/init.d/svscan with /usr/bin/qmailctl for ExeStop
 
 * Sun Apr 23 2023 17:05:00 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2-1.1 Start 20/02/2023 End 23/04/2023
